# realtime_software

./: CMakeLists.txt  README.md  config.txt
demo/AdvC/: AdvC_fopenFprintf.c  AdvC_fopenFputs.c  AdvC_fopenFwrite.c  AdvC_funPtr.c  AdvC_mainArgs.c  AdvC_malloc.c  AdvC_openFile.c  AdvC_openSeek.c  AdvC_passArgs.c  AdvC_ptrArray.c  AdvC_ptrStr.c
demo/BasicC/: BasiC _ifElse.c  BasicC_Quiz.c  BasicC_doWhile.c  BasicC_emoji.c  BasicC_forLoop.c  BasicC_kbdRpt.c  BasicC_mean.c  BasicC_ptrSwap.c  BasicC_scope.c  BasicC_structArray.c  BasicC_whileLoop.c
demo/RTdemo/: CLK_signal.c  CLK_timer.c  DAQ_Example(PCIe).c  DAQ_sine.c  DAQ_test.c  MSG_csrv.c  MSG_pipe.c  PRC_fork.c  PTH_args.c  PTH_convar.c  PTH_create.c  PTH_join.c  PTH_mutex.c  RTI_prio.c  alarm.c  dm_clock.c
examples/: CMakeLists.txt  bitwise.c  emoji.c  practice.c
realtime_software/: CMakeLists.txt
realtime_software/lecture/: 1.2_introduction.c  1.3_essence_of_C.c  1.4_control_p1.c  1.5_expressions.c  1.6_array_struct_union.c  1.7_type.c  1.8_pointers.c  2.1_pointers_array.c  2.2_strings.c  2.3_args.c  2.3_dynamic_memory.c  2.4_pointers_to_func.c  2.5_file_input_output.c  2.6_unbuffered_files.c  5.1_processes.c  6.1_pthread_creation.c  6.2_pthread_mutex.c  7.1_messages.c  CMakeLists.txt
realtime_software/major_ca/: CMakeLists.txt  file.c  keyboard.c  keyboard.h  main.c  start.c  start.h
realtime_software/minor_ca/: CMakeLists.txt  README.md  minor_ca.c
revision/: CMakeLists.txt
