add_executable(1.3 1.3_essence_of_C.c)
add_executable(1.4 1.4_control_p1.c)
add_executable(1.5 1.5_expressions.c)
add_executable(1.6 1.6_array_struct_union.c)
add_executable(1.7 1.7_type.c)
add_executable(1.8 1.8_pointers.c)
add_executable(2.1 2.1_pointers_array.c)
add_executable(2.2 2.2_strings.c)
add_executable(2.3 2.3_args.c)
add_executable(5.1 5.1_processes.c)
add_executable(6.1 6.1_pthread_creation.c)
target_link_libraries(6.1 pthread)
add_executable(6.2 6.2_pthread_mutex.c)
target_link_libraries(6.2 pthread)
add_executable(7.1 7.1_messages.c)

